# Django

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/authorization/: admin.py  apps.py  serializers.py  urls.py
apps/authorization/admin/: __init__.py  actions.py  admin.py  constants.py
apps/authorization/admin/forms/: add.py  change.py
apps/authorization/business/: authentication.py  authorization.py
apps/authorization/migrations/: 0001_initial.py  0002_alter_user_options_user_gender_and_more.py
apps/authorization/models/: __init__.py  manager.py  user.py
apps/authorization/tasks/: example.py
apps/authorization/test/test_integration/: test_authorization.py
apps/authorization/test/test_module/: test_user.py
apps/authorization/views/: authentication.py  authorization.py
apps/authorization/workers/: regular.py
apps/storage/: admin.py  models.py  serializer.py  urls.py  views.py
apps/storage/tasks/: processing.py
apps/storage/tests/: test_stability.py
apps/storage/workers/: regular.py
core/: settings.py  swagger.py  urls.py
hooks/: test_hook.sh
