[tool.poetry]
name = "django_project"
version = "0.1.0"
description = "Simple django application."
authors = ["Nikita Klopotvskiy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
django = "^4.2.6"
djangorestframework = "^3.14.0"
celery = "^5.3.4"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
drf-yasg = "^1.21.7"
pyjwt = "^2.8.0"
djangorestframework-simplejwt = "^5.3.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
isort = "^5.12.0"
black = "^23.11.0"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-annotations-coverage = "^0.0.6"
flake8-bandit = "^4.1.1"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^23.9.16"
flake8-builtins = "^2.2.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.5.0"
flake8-executable = "^2.1.3"
flake8-fixme = "^1.1.1"
flake8-future-import = "^0.4.7"
flake8-pyi = "^23.11.0"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.7.2"
flake8-mutable = "^1.2.0"
flake8-string-format = "^0.3.0"
flake8-todo = "^0.7"
flake8-unused-arguments = "^0.0.13"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.black]
line-length = 79
force-exclude = "settings.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
